<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- 1) Notifications bell -->
    <item
        android:id="@+id/menu_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="Notifications"
        app:showAsAction="always"
        android:orderInCategory="0"/>

    <!-- 2) Profile -->
    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/menu_profile"
        app:showAsAction="never"
        android:orderInCategory="1"/>

    <!-- 3) Create Team -->
    <item
        android:id="@+id/menu_create_team"
        android:icon="@drawable/ic_add"
        android:title="@string/menu_create_team"
        app:showAsAction="never"
        android:orderInCategory="2"/>

    <!-- 4) Joined Teams (dynamic items inserted between order 3 onward) -->
    <group
        android:id="@+id/group_teams"
        android:checkableBehavior="none"/>

    <!-- 5) Join Team -->
    <item
        android:id="@+id/menu_join_team"
        android:icon="@drawable/ic_group_add"
        android:title="@string/menu_join_team"
        app:showAsAction="never"
        android:orderInCategory="5"/>

    <!-- 6) Logout -->
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/menu_logout"
        app:showAsAction="never"
        android:orderInCategory="6"/>

</menu>
